--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.19",
+    "vue-easy-lightbox": "^1.18.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
