--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
     "vue": "^3.4.19",
     "vue-easy-lightbox": "^1.18.0",
     "vue-router": "^4.3.0"
