--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@headlessui/vue": "^1.7.19",
     "vue": "^3.4.19",
     "vue-easy-lightbox": "^1.18.0",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
